<resources>
    <string name="app_name">News</string>
    <string name="app_title">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="search_for_news">Search For News</string>
    <string name="enterName">Enter e-mai</string>
    <string name="enterPassword">Enter Password</string>
    <string name="email_password_error">E-mail or password didn\'t work</string>
    <string name="save_password">Save Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="your_string"><u>Create Account</u></string>
    <string name="create_user_name">Create User Name</string>
    <string name="enter_valid_e_mail">Enter Valid E-mail</string>
    <string name="confirm_e_mail">Confirm E-mail</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="invalid_user_name">User Name Invalid</string>
    <string name="empty_password">Empty Password</string>
    <string name="user_name_invalid">User Name Invalid</string>
    <string name="password_confirm_error">Password didn\'t mach</string>
    <string name="password_error">Password Invalid</string>
    <string name="email_invalid">E-mail invalid</string>
    <string name="email_mach">E-mail didn\'t mach</string>
    <string name="mandatory_field">Mandatory Field</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login_in_app">Login in App</string>
    <string name="welcome_to_news_app">Welcome to News App</string>
    <string name="remember_me">Remember me</string>
    <string name="select_at_least_1_subject">Select at least 1 subject</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="interests">Interests</string>
    <string name="change_data">Change Data</string>
    <string name="save_data">Save Data</string>
    <string name="change_interests">Change Interests</string>
    <string name="enter_last_password">Enter Last Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="profile">Profile</string>
    <string name="email">E-mail: %s</string>
    <string name="username">User Name: %s</string>
    <string name="password">Password: %s</string>
    <string name="nothing_saved_yet">Nothing saved yet ;)</string>
    <string name="cancelButton">Cancelar mudança dos dados</string>
    <string name="save_articles">Salvar artigo em favoritos</string>
    <string name="lista_de_favoritos">Lista de favoritos</string>
    <string name="mudar_imagem_de_perfil">Mudar imagem de perfil</string>
    <string name="lista_de_noticias_da_sua_pesquisa">Lista de noticias da sua pesquisa</string>
    <string name="entre_em_contato">Entre em contato:</string>
    <string name="dados_e_not_cias_s_o_retirados_da_api_https_newsapi_org">Dados e notícias são retirados da API https://newsapi.org/</string>
    <string name="site">Site</string>
    <string name="politica_de_privacidade">Politica de privacidade</string>
</resources>