<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.register.passwordfragment.PasswordFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragmentCreatePassword"
        style="@style/FormEditTextInput"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createPasswordField"
            style="@style/FormEditText"
            android:hint="@string/create_password"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragmentCreateConfirmPassword"
        style="@style/FormEditTextInput"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentCreatePassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordField"
            style="@style/FormEditText"
            android:hint="@string/confirm_password"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCreateNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_fill_bg"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreatePrevious"
        app:layout_constraintEnd_toEndOf="@+id/fragmentCreateConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/fragmentCreateConfirmPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCreatePrevious"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button_white_bg"
        android:text="@string/previous"
        android:textAllCaps="false"
        android:textColor="@color/button"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonCreateNext"
        app:layout_constraintStart_toStartOf="@+id/buttonCreateNext" />


</androidx.constraintlayout.widget.ConstraintLayout>